--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pweb
 spring.datasource.username=postgres
 spring.datasource.password=a26061996
 spring.jpa.show-sql=true
-
+server.servlet.context-path = /APINomina/V1
 spring.jpa.properties.hibernate.jbdc.lob.non_contextual_creation = true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.hibernate.ddl-auto=update 
