--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.jbdc.lob.non_contextual_creation = true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none 
+spring.jpa.hibernate.ddl-auto=update 
+server.servlet.context-path = /APINomina/V1
