--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5433/pweb
+spring.datasource.url=jdbc:postgresql://localhost:5432/pweb
 spring.datasource.username=postgres
-spring.datasource.password=labcom,2015
+spring.datasource.password=a26061996
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.jbdc.lob.non_contextual_creation = true
