--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.jbdc.lob.non_contextual_creation = true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update 
 server.servlet.context-path = /APINomina/V1
+server.port = 8085
